# twitchchat

./: .gitignore  Cargo.toml
src/: messages.rs
src/irc/: tags.rs
src/messages/: clear_chat.rs  clear_msg.rs  global_user_state.rs  notice.rs  privmsg.rs  room_state.rs  tags.rs  user_notice.rs  user_state.rs  whisper.rs
src/runner/: async_runner.rs  channel.rs
src/test/: tags_builder.rs
src/twitch/: attributes.rs  badge.rs  emotes.rs  flags.rs  mod.rs
twitchchat-macros/: Cargo.toml
twitchchat-macros/src/: lib.rs
