[package]
authors = ["museun <museun@outlook.com>"]
categories = ["asynchronous", "network-programming", "parser-implementations"]
description = "interface to the irc-side of twitch's chat system"
documentation = "https://docs.rs/twitchchat/latest/twitchchat/"
edition = "2018"
keywords = ["twitch", "irc", "async", "asynchronous", "tokio"]
license = "MIT OR Apache-2.0"
name = "twitchchat"
readme = "README.md"
repository = "https://github.com/museun/twitchchat"
version = "0.14.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
testing = [
  "async",
  "async-mutex",
]

async = [
  "async-channel",
  "async-dup",
  "fastrand",
  "futures-lite",
  "futures-timer",
  "log",
  "pin-project-lite",
]

[dependencies]
# logging support
log = {version = "0.4", optional = true, features = ["std"]}

# just the futures traits
futures-lite = {version = "1.11", optional = true}

# field pin projection
pin-project-lite = {version = "0.2", optional = true}

# cloneable async writes
async-dup = {version = "1.2", optional = true}

# message passing
async-channel = {version = "1.5", optional = true}

# for timing out futures
futures-timer = {version = "3.0", optional = true}

# for 'fairness' in the main loop
fastrand = {version = "1.4", optional = true}

# for optional serialization and deserialization
serde = {version = "1.0", features = ["derive"], optional = true}

# optional runtimes (for TcpStream)
# these use the futures AsyncWrite+AsyncRead
async-io = {version = "1.3", optional = true}
async-tls = {version = "0.11", default-features = false, features = ["client"], optional = true}
smol = {version = "1.2", optional = true}
# TODO look into what their features do. the ones they have enabled by default seem important
async-std = {version = "1.9", optional = true}

# tokio has its own AsyncWrite+AsyncRead
tokio = {version = "1.2", features = ["net"], optional = true}
tokio-util = {version = "0.6", features = ["compat"], optional = true}

# rustls
tokio-rustls = {version = "0.22", optional = true}
webpki-roots = {version = "0.21", optional = true}

# native-tls
native-tls = {version = "0.2", optional = true}
tokio-native-tls = {version = "0.3", optional = true}

# openssl
#openssl = {version = "0.10", optional = true, features = ["v110"]}
#tokio-openssl = {version = "0.6", optional = true}

# for some test utilities
async-mutex = {version = "1.4", optional = true}
derive-new = "0.5.9"
derive_more = {version = "0.99.13", default-features = false, features = ["from", "deref", "constructor", "is_variant", "error"]}
either = "1.6.1"
getset = "0.1.1"
parse-display = "0.4.1"
regex = "1.4.5"
twitchchat-macros = {path = "twitchchat-macros"}

[dev-dependencies]
anyhow = "1.0"
async-executor = {version = "1.4", default-features = false}
rmp-serde = "0.15.4"
serde_json = "1.0"

[[example]]
name = "message_parse"
required-features = ["async"]

[[example]]
name = "smol_demo"
required-features = ["smol", "async"]

[[example]]
name = "async_io_demo"
required-features = ["async-io", "async"]

[[example]]
name = "async_std_demo"
required-features = ["async-std", "async-std/attributes", "async"]

[[example]]
name = "tokio_demo"
required-features = ["tokio/full", "tokio-util", "async"]

[[example]]
name = "simple_bot"
required-features = ["smol", "async"]
