[package]
authors = ["snowpoke <hello@snowpoke.ink>"]
edition = "2018"
name = "twitchchat-macros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3.2"
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.71"
unbox-box = "0.1.0"
